--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -30,7 +30,8 @@
             android:textColor="@color/black"
             android:textSize="20sp"
             android:gravity="center"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            tools:ignore="NestedWeights" />
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -135,7 +136,8 @@
             android:background="@android:color/transparent"
             app:tint="@color/cool_pink"
             android:contentDescription="@string/repeat"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            tools:ignore="NestedWeights" />
 
         <ImageButton
             android:layout_width="wrap_content"
